tests/machine/x/cpp/min_max_builtin.mochi.error
line 6: ../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:6:21: error: no matching function for call to ‘min(std::vector<int>&)’
    6 |         (cout << min(nums));
      |                  ~~~^~~~~~
In file included from /usr/include/c++/13/algorithm:60,
                 from /usr/include/x86_64-linux-gnu/c++/13/bits/stdc++.h:51,
                 from ../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:1:
/usr/include/c++/13/bits/stl_algobase.h:233:5: note: candidate: ‘template<class _Tp> constexpr const _Tp& std::min(const _Tp&, const _Tp&)’
  233 |     min(const _Tp& __a, const _Tp& __b)
      |     ^~~
/usr/include/c++/13/bits/stl_algobase.h:233:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:6:21: note:   candidate expects 2 arguments, 1 provided
    6 |         (cout << min(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algobase.h:281:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr const _Tp& std::min(const _Tp&, const _Tp&, _Compare)’
  281 |     min(const _Tp& __a, const _Tp& __b, _Compare __comp)
      |     ^~~
/usr/include/c++/13/bits/stl_algobase.h:281:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:6:21: note:   candidate expects 3 arguments, 1 provided
    6 |         (cout << min(nums));
      |                  ~~~^~~~~~
In file included from /usr/include/c++/13/algorithm:61:
/usr/include/c++/13/bits/stl_algo.h:5775:5: note: candidate: ‘template<class _Tp> constexpr _Tp std::min(initializer_list<_Tp>)’
 5775 |     min(initializer_list<_Tp> __l)
      |     ^~~
/usr/include/c++/13/bits/stl_algo.h:5775:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:6:21: note:   ‘std::vector<int>’ is not derived from ‘std::initializer_list<_Tp>’
    6 |         (cout << min(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algo.h:5785:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr _Tp std::min(initializer_list<_Tp>, _Compare)’
 5785 |     min(initializer_list<_Tp> __l, _Compare __comp)
      |     ^~~
/usr/include/c++/13/bits/stl_algo.h:5785:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:6:21: note:   ‘std::vector<int>’ is not derived from ‘std::initializer_list<_Tp>’
    6 |         (cout << min(nums));
      |                  ~~~^~~~~~
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:7:21: error: no matching function for call to ‘max(std::vector<int>&)’
    7 |         (cout << max(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algobase.h:257:5: note: candidate: ‘template<class _Tp> constexpr const _Tp& std::max(const _Tp&, const _Tp&)’
  257 |     max(const _Tp& __a, const _Tp& __b)
      |     ^~~
/usr/include/c++/13/bits/stl_algobase.h:257:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:7:21: note:   candidate expects 2 arguments, 1 provided
    7 |         (cout << max(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algobase.h:303:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr const _Tp& std::max(const _Tp&, const _Tp&, _Compare)’
  303 |     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
      |     ^~~
/usr/include/c++/13/bits/stl_algobase.h:303:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:7:21: note:   candidate expects 3 arguments, 1 provided
    7 |         (cout << max(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algo.h:5795:5: note: candidate: ‘template<class _Tp> constexpr _Tp std::max(initializer_list<_Tp>)’
 5795 |     max(initializer_list<_Tp> __l)
      |     ^~~
/usr/include/c++/13/bits/stl_algo.h:5795:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:7:21: note:   ‘std::vector<int>’ is not derived from ‘std::initializer_list<_Tp>’
    7 |         (cout << max(nums));
      |                  ~~~^~~~~~
/usr/include/c++/13/bits/stl_algo.h:5805:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr _Tp std::max(initializer_list<_Tp>, _Compare)’
 5805 |     max(initializer_list<_Tp> __l, _Compare __comp)
      |     ^~~
/usr/include/c++/13/bits/stl_algo.h:5805:5: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/min_max_builtin.mochi.cpp:7:21: note:   ‘std::vector<int>’ is not derived from ‘std::initializer_list<_Tp>’
    7 |         (cout << max(nums));
      |                  ~~~^~~~~~

  5 | 	auto nums = vector<int>{3, 1, 4};
  6 | 	(cout << min(nums));
  7 | 	(cout << max(nums));
